# auto-clicker

./: README.md  main.py  pyproject.toml
.github/workflows/: pythonpackage.yml
models/: keyboard_listener.py  keyboard_presser.py  manager.py  mouse_clicker.py  mouse_listener.py  other.py
test/: test_functions.py
