[tool.poetry]
name = "burny_test_template"
version = "0.1.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.4.1"
pynput = "^1.6.8"
pyautogui = "^0.9.50"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-asyncio = "^0.10.0"
hypothesis = "^5.7.1"
radon = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
